--- a/edit.css
+++ b/edit.css
@@ -6,8 +6,7 @@
 
 header{
 	background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)) , url(https://images.pexels.com/photos/399161/pexels-photo-399161.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-	height:auto;
-	width:100%;
+	height:100vh;
 	background-size: cover;
 	background-position: center;
 }
